@@ -7,6 +7,7 @@ Alpha 0.014
 * Automatically "break" each case in a switch statement
 * Switch statements now support comma-separated cases
 * Unit test refactoring
+* Fixed duplicate class declarations bug
 
 1/29/12 - Alpha 0.013
 --------
